k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oluto
  labels:
    name: oluto
    istio-injection: enabled
